allowing view of bolonha degrees in public portal