@@ -10,8 +10,8 @@ package net.sourceforge.fenixedu.presentationTier.Action.publico;
 
 import java.util.ArrayList;
 import java.util.Collections;
-import java.util.Iterator;
 import java.util.List;
+import java.util.Locale;
 
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
@@ -20,11 +20,17 @@ import javax.servlet.http.HttpSession;
 import net.sourceforge.fenixedu.applicationTier.Servico.exceptions.FenixServiceException;
 import net.sourceforge.fenixedu.dataTransferObject.InfoDegreeCurricularPlan;
 import net.sourceforge.fenixedu.dataTransferObject.InfoExecutionDegree;
+import net.sourceforge.fenixedu.dataTransferObject.InfoExecutionDegreeWithInfoDegreeCurricularPlanAndExecutionYear;
 import net.sourceforge.fenixedu.dataTransferObject.InfoExecutionPeriod;
-import net.sourceforge.fenixedu.dataTransferObject.InfoExecutionYear;
+import net.sourceforge.fenixedu.dataTransferObject.InfoExecutionPeriodWithInfoExecutionYear;
 import net.sourceforge.fenixedu.dataTransferObject.comparators.ComparatorByNameForInfoExecutionDegree;
+import net.sourceforge.fenixedu.domain.DegreeCurricularPlan;
+import net.sourceforge.fenixedu.domain.ExecutionDegree;
+import net.sourceforge.fenixedu.domain.ExecutionPeriod;
+import net.sourceforge.fenixedu.domain.ExecutionYear;
 import net.sourceforge.fenixedu.framework.factory.ServiceManagerServiceFactory;
 import net.sourceforge.fenixedu.presentationTier.Action.base.FenixContextDispatchAction;
+import net.sourceforge.fenixedu.presentationTier.Action.exceptions.FenixActionException;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.RequestUtils;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.ServiceUtils;
 import net.sourceforge.fenixedu.presentationTier.Action.sop.utils.SessionConstants;
@@ -45,159 +51,140 @@ import org.apache.struts.util.LabelValueBean;
  */
 public class ChooseExamsMapContextDANew extends FenixContextDispatchAction {
 
-    public ActionForward prepare(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
-        HttpSession session = request.getSession(true);
-        if (session != null) {
+    public ActionForward prepare(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response) throws Exception {
+        final HttpSession session = request.getSession(true);
 
+        if (session != null) {
             Integer degreeId = getFromRequest("degreeID", request);
             request.setAttribute("degreeID", degreeId);
+            request.setAttribute("degree", rootDomainObject.readDegreeByOID(degreeId));
 
             Integer executionDegreeId = getFromRequest("executionDegreeID", request);
             request.setAttribute("executionDegreeID", executionDegreeId);
 
             Integer degreeCurricularPlanId = getFromRequest("degreeCurricularPlanID", request);
             request.setAttribute("degreeCurricularPlanID", degreeCurricularPlanId);
+            
+            InfoExecutionPeriod infoExecutionPeriod = (InfoExecutionPeriod) request.getAttribute(SessionConstants.EXECUTION_PERIOD);
+            
+            List<LabelValueBean> executionPeriodsLabelValueList = buildExecutionPeriodsLabelValueList(degreeCurricularPlanId);
+            if (executionPeriodsLabelValueList.size() > 1) {
+                request.setAttribute("lista", executionPeriodsLabelValueList);
+            } else {
+                request.removeAttribute("lista");
+            }
 
             Boolean inEnglish = getFromRequestBoolean("inEnglish", request);
+            if (inEnglish == null) {
+                inEnglish = getLocale(request).getLanguage().equals(Locale.ENGLISH.getLanguage());
+            }
             request.setAttribute("inEnglish", inEnglish);
-    		request.removeAttribute(SessionConstants.LABELLIST_EXECUTIONPERIOD);
-    		
-			List executionPeriodsLabelValueList = new ArrayList();
-			executionPeriodsLabelValueList = getList(degreeCurricularPlanId);
-			if (executionPeriodsLabelValueList.size() > 1) {			
-					request.setAttribute("lista",executionPeriodsLabelValueList);
-
-			} else {
-					request.removeAttribute("lista");
-			}
-			/*------------------------------------*/
+            
+            request.removeAttribute(SessionConstants.LABELLIST_EXECUTIONPERIOD);
 
             return mapping.findForward("prepare");
-       }
-       throw new Exception();
-//        // nao ocorre... pedido passa pelo filtro Autorizacao
-
+        } else {
+            throw new Exception();    
+        }
     }
 
-    public ActionForward choose(ActionMapping mapping, ActionForm form, HttpServletRequest request,
-            HttpServletResponse response) throws Exception {
-        HttpSession session = request.getSession(false);
-        DynaActionForm chooseExamContextoForm = (DynaActionForm) form;
+    private List<LabelValueBean> buildExecutionPeriodsLabelValueList(Integer degreeCurricularPlanId) throws Exception {
+        List<InfoExecutionDegree> infoExecutionDegreeList = new ArrayList<InfoExecutionDegree>();
+        try {
+            final Object argsLerLicenciaturas[] = { degreeCurricularPlanId };
+            infoExecutionDegreeList = (List<InfoExecutionDegree>) ServiceUtils.executeService(null, "ReadPublicExecutionDegreeByDCPID", argsLerLicenciaturas);
+        } catch (FenixServiceException e) {
+            throw new Exception(e);
+        }
 
+        List<LabelValueBean> result = new ArrayList<LabelValueBean>();
+        for (InfoExecutionDegree infoExecutionDegree : infoExecutionDegreeList) {
+            Object args[] = { infoExecutionDegree.getInfoExecutionYear() };
+            try {
+                List<InfoExecutionPeriod> infoExecutionPeriodsList = (List<InfoExecutionPeriod>) ServiceUtils.executeService(null, "ReadNotClosedPublicExecutionPeriodsByExecutionYear", args);
+
+                for (InfoExecutionPeriod infoExecutionPeriodIter : infoExecutionPeriodsList) {
+                    result.add(new LabelValueBean(infoExecutionPeriodIter.getName() + " - " + infoExecutionPeriodIter.getInfoExecutionYear().getYear(), 
+                            infoExecutionPeriodIter.getIdInternal().toString()));
+                }
+            } catch (FenixServiceException e) {
+                throw new Exception(e);
+            }
+        }
+
+        ComparatorChain comparatorChain = new ComparatorChain();
+        comparatorChain.addComparator(new BeanComparator("value"));
+        Collections.sort(result, comparatorChain);
+        Collections.reverse(result);
+        
+        return result;
+    }
+
+    public ActionForward choose(ActionMapping mapping, ActionForm form, HttpServletRequest request, HttpServletResponse response) throws Exception {
+        final HttpSession session = request.getSession(false);
         SessionUtils.removeAttributtes(session, SessionConstants.CONTEXT_PREFIX);
 
         if (session != null) {
-            ActionErrors errors = new ActionErrors();
-
-            InfoExecutionPeriod infoExecutionPeriod = (InfoExecutionPeriod) request
-                    .getAttribute(SessionConstants.EXECUTION_PERIOD);
-
-            String[] selectedCurricularYears = (String[]) chooseExamContextoForm
-                    .get("selectedCurricularYears");
-
-            Boolean selectAllCurricularYears = (Boolean) chooseExamContextoForm
-                    .get("selectAllCurricularYears");
-
-            Integer degreeId = (Integer) chooseExamContextoForm.get("degreeID");
-
-            if ((selectAllCurricularYears != null) && selectAllCurricularYears.booleanValue()) {
+            final ActionErrors errors = new ActionErrors();
+            final DynaActionForm chooseExamContextoForm = (DynaActionForm) form;
+            
+            // index
+            Integer indexValue = getFromRequest("index", request);
+            request.setAttribute("index", indexValue);
+            
+            // curricularYearList
+            final Boolean selectAllCurricularYears = (Boolean) chooseExamContextoForm.get("selectAllCurricularYears");
+            final String[] selectedCurricularYears;
+            if (selectAllCurricularYears != null && selectAllCurricularYears) {
                 String[] allCurricularYears = { "1", "2", "3", "4", "5" };
                 selectedCurricularYears = allCurricularYears;
+            } else {
+                selectedCurricularYears = (String[]) chooseExamContextoForm.get("selectedCurricularYears"); 
             }
-
-            List curricularYears = new ArrayList(selectedCurricularYears.length);
-            for (int i = 0; i < selectedCurricularYears.length; i++)
-                curricularYears.add(new Integer(selectedCurricularYears[i]));
-
+            final List<Integer> curricularYears = new ArrayList<Integer>(selectedCurricularYears.length);
+            for (String selectedCurricularYear : selectedCurricularYears) {
+                curricularYears.add(Integer.valueOf(selectedCurricularYear));
+            }
             request.setAttribute("curricularYearList", curricularYears);
-            Integer indexValue = getFromRequest("index", request);
-            //	int index = indexValue.intValue();
-            request.setAttribute("index", indexValue);
+            
+            // degreeID
+            Integer degreeId = (Integer) chooseExamContextoForm.get("degreeID");
+            request.setAttribute("degreeID", degreeId);
 
+            // degreeCurricularPlanID
             Integer degreeCurricularPlanId = getFromRequest("degreeCurricularPlanID", request);
             request.setAttribute("degreeCurricularPlanID", degreeCurricularPlanId);
-
-            // Integer degreeId = getFromRequest("degreeID", request);
-            request.setAttribute("degreeID", degreeId);
-			Integer indice = (Integer)chooseExamContextoForm.get("indice");
-
-			List executionPeriodsLabelValueList = new ArrayList();
-		    executionPeriodsLabelValueList = getList(degreeCurricularPlanId);
-		    if (executionPeriodsLabelValueList.size() > 1) {			
-				   request.setAttribute("lista",executionPeriodsLabelValueList);
-
+            final DegreeCurricularPlan degreeCurricularPlan = rootDomainObject.readDegreeCurricularPlanByOID(degreeCurricularPlanId);
+            if (!degreeCurricularPlan.getDegree().getIdInternal().equals(degreeId)) {
+                throw new FenixActionException();
             } else {
-				   request.removeAttribute("lista");
-		    }
-			request.setAttribute("indice",indice);
-			Object argsLerLicenciaturas[] =null;
-			if (indice != null) {
-			InfoExecutionPeriod infoExecutionPeriod2 = new InfoExecutionPeriod();
-			Object args[] = {indice};
-			try {
-				infoExecutionPeriod2 = (InfoExecutionPeriod )ServiceManagerServiceFactory.executeService(null,
-				"ReadExecutionPeriodByOID", args);
-			}catch(FenixServiceException e){
-				errors.add("impossibleDegreeSite", new ActionError("error.impossibleDegreeSite"));
-				saveErrors(request, errors);
-				return (new ActionForward(mapping.getInput()));
-			}
-			 infoExecutionPeriod = infoExecutionPeriod2;
-			 RequestUtils.setExecutionPeriodToRequest(request,infoExecutionPeriod2);
-             argsLerLicenciaturas= new Object[]{infoExecutionPeriod2.getInfoExecutionYear().getIdInternal()};
-			}else {
-				argsLerLicenciaturas= new Object[]{infoExecutionPeriod.getInfoExecutionYear().getIdInternal()};
-			}
-            List infoExecutionDegreeList = (List) ServiceUtils.executeService(null,
-                    "ReadExecutionDegreesByExecutionYearId", argsLerLicenciaturas);
-
-            Collections.sort(infoExecutionDegreeList, new ComparatorByNameForInfoExecutionDegree());
-
-            InfoExecutionDegree infoExecutionDegree1 = new InfoExecutionDegree();
-            Iterator iterator = infoExecutionDegreeList.iterator();
-            while (iterator.hasNext()) {
-                infoExecutionDegree1 = (InfoExecutionDegree) iterator.next();
-                if (infoExecutionDegree1.getInfoDegreeCurricularPlan().getIdInternal().equals(
-                        degreeCurricularPlanId)) {
-                    //		request.setAttribute("infoDegreeCurricularPlan",
-                    // infoExecutionDegree1);
-                    break;
-                }
+                request.setAttribute("degree", degreeCurricularPlan.getDegree());    
             }
 
-            /*
-             * InfoExecutionDegree infoExecutionDegree = (InfoExecutionDegree)
-             * infoExecutionDegreeList.get(index);
-             */
-            InfoExecutionDegree infoExecutionDegree = infoExecutionDegree1;
-
-            //**************************************/
-
-            Object[] args1 = {degreeId};
-
-            List infoDegreeCurricularPlanList = null;
+            // lista
+            List<LabelValueBean> executionPeriodsLabelValueList = buildExecutionPeriodsLabelValueList(degreeCurricularPlanId);
+            if (executionPeriodsLabelValueList.size() > 1) {
+                request.setAttribute("lista", executionPeriodsLabelValueList);
+            } else {
+                request.removeAttribute("lista");
+            }
+            
+            // infoDegreeCurricularPlan
+            List<InfoDegreeCurricularPlan> infoDegreeCurricularPlanList = null;
             try {
-                infoDegreeCurricularPlanList = (List) ServiceManagerServiceFactory.executeService(null,
-                        "ReadPublicDegreeCurricularPlansByDegree", args1);
+                final Object[] args1 = { degreeId };
+                infoDegreeCurricularPlanList = (List<InfoDegreeCurricularPlan>) ServiceManagerServiceFactory.executeService(null, "ReadPublicDegreeCurricularPlansByDegree", args1);
             } catch (FenixServiceException e) {
                 errors.add("impossibleDegreeSite", new ActionError("error.impossibleDegreeSite"));
                 saveErrors(request, errors);
-                return (new ActionForward(mapping.getInput()));
+                return new ActionForward(mapping.getInput());
             }
-            //order the list by state and next by begin date
             ComparatorChain comparatorChain = new ComparatorChain();
             comparatorChain.addComparator(new BeanComparator("state"));
             comparatorChain.addComparator(new BeanComparator("initialDate"), true);
-
             Collections.sort(infoDegreeCurricularPlanList, comparatorChain);
-
             if (degreeCurricularPlanId != null) {
-                Iterator iterator1 = infoDegreeCurricularPlanList.iterator();
-                while (iterator1.hasNext()) {
-                    InfoDegreeCurricularPlan infoDegreeCurricularPlanElem = (InfoDegreeCurricularPlan) iterator1
-                            .next();
-
+                for (InfoDegreeCurricularPlan infoDegreeCurricularPlanElem : infoDegreeCurricularPlanList) {
                     if (infoDegreeCurricularPlanElem.getIdInternal().equals(degreeCurricularPlanId)) {
                         infoDegreeCurricularPlanElem.prepareEnglishPresentation(getLocale(request));
                         request.setAttribute("infoDegreeCurricularPlan", infoDegreeCurricularPlanElem);
@@ -206,111 +193,53 @@ public class ChooseExamsMapContextDANew extends FenixContextDispatchAction {
                 }
             }
 
-            //***************************************/
+            // indice, SessionConstants.EXECUTION_PERIOD, SessionConstants.EXECUTION_PERIOD_OID
+            InfoExecutionPeriod infoExecutionPeriod = (InfoExecutionPeriod) request.getAttribute(SessionConstants.EXECUTION_PERIOD);
+            Integer executionPeriodID = (Integer) chooseExamContextoForm.get("indice");
+            if (executionPeriodID != null) {
+                try {
+                    final Object args[] = { executionPeriodID };
+                    infoExecutionPeriod = (InfoExecutionPeriod) ServiceManagerServiceFactory.executeService(null, "ReadExecutionPeriodByOID", args);
+                } catch (FenixServiceException e) {
+                    errors.add("impossibleDegreeSite", new ActionError("error.impossibleDegreeSite"));
+                    saveErrors(request, errors);
+                    return new ActionForward(mapping.getInput());
+                }
+            }
+            request.setAttribute("indice", infoExecutionPeriod.getIdInternal());
+            chooseExamContextoForm.set("indice", infoExecutionPeriod.getIdInternal());
+            RequestUtils.setExecutionPeriodToRequest(request, infoExecutionPeriod);
             request.setAttribute(SessionConstants.EXECUTION_PERIOD, infoExecutionPeriod);
-            request.setAttribute(SessionConstants.EXECUTION_PERIOD_OID, infoExecutionPeriod
-                    .getIdInternal().toString());
-
-            if (infoExecutionDegree != null) {
-
-                //added by rspl
+            request.setAttribute(SessionConstants.EXECUTION_PERIOD_OID, infoExecutionPeriod.getIdInternal().toString());
+            
+            // SessionConstants.EXECUTION_DEGREE, executionDegreeID, infoExecutionDegree
+            final ExecutionPeriod executionPeriod = rootDomainObject.readExecutionPeriodByOID(infoExecutionPeriod.getIdInternal());
+            
+            ExecutionDegree executionDegree = degreeCurricularPlan.getExecutionDegreeByYear(executionPeriod.getExecutionYear());
+            if (executionDegree == null) {
+                executionDegree = degreeCurricularPlan.getMostRecentExecutionDegree();
+                
+                infoExecutionPeriod = InfoExecutionPeriodWithInfoExecutionYear.newInfoFromDomain(executionDegree.getExecutionYear().readExecutionPeriodForSemester(1));
+                request.setAttribute("indice", infoExecutionPeriod.getIdInternal());
+                chooseExamContextoForm.set("indice", infoExecutionPeriod.getIdInternal());
+                RequestUtils.setExecutionPeriodToRequest(request, infoExecutionPeriod);
+                request.setAttribute(SessionConstants.EXECUTION_PERIOD, infoExecutionPeriod);
+                request.setAttribute(SessionConstants.EXECUTION_PERIOD_OID, infoExecutionPeriod.getIdInternal().toString());
+            }
+            
+            if (executionDegree != null) {
+                InfoExecutionDegree infoExecutionDegree = InfoExecutionDegreeWithInfoDegreeCurricularPlanAndExecutionYear.newInfoFromDomain(executionDegree);
                 request.setAttribute(SessionConstants.EXECUTION_DEGREE, infoExecutionDegree);
-                //-----------------
-                request
-                        .setAttribute("executionDegreeID", infoExecutionDegree.getIdInternal()
-                                .toString());
+                request.setAttribute("executionDegreeID", infoExecutionDegree.getIdInternal().toString());
                 RequestUtils.setExecutionDegreeToRequest(request, infoExecutionDegree);
-                /*
-                 * request.setAttribute( "infoDegreeCurricularPlan",
-                 * (InfoDegreeCurricularPlan)infoExecutionDegree.getInfoDegreeCurricularPlan());
-                 */
-
             } else {
-
-                return mapping.findForward("Licenciatura execucao inexistente");
+                return mapping.findForward("viewExamsMap");
             }
 
-        } else
+            return mapping.findForward("showExamsMap");
+        } else {
             throw new Exception();
-        // nao ocorre... pedido passa pelo filtro Autorizacao
-
-        return mapping.findForward("showExamsMap");
-
-    }
-
-    private Integer getFromRequest(String parameter, HttpServletRequest request) {
-        Integer parameterCode = null;
-        String parameterCodeString = request.getParameter(parameter);
-        if (parameterCodeString == null) {
-            parameterCodeString = (String) request.getAttribute(parameter);
         }
-        if (parameterCodeString != null) {
-            try {
-                parameterCode = new Integer(parameterCodeString);
-            } catch (Exception exception) {
-                return null;
-            }
-        }
-        return parameterCode;
-    }
-
-    private Boolean getFromRequestBoolean(String parameter, HttpServletRequest request) {
-        Boolean parameterBoolean = null;
-
-        String parameterCodeString = request.getParameter(parameter);
-        if (parameterCodeString == null) {
-            parameterCodeString = (String) request.getAttribute(parameter);
-        }
-        if (parameterCodeString != null) {
-            try {
-                parameterBoolean = new Boolean(parameterCodeString);
-            } catch (Exception exception) {
-                return null;
-            }
-        }
-        return parameterBoolean;
-    }
-    private List getList(Integer degreeCurricularPlanId) throws Exception{
-		/*------------------------------------*/      
-				Object argsLerLicenciaturas[] = {degreeCurricularPlanId};
-				InfoExecutionDegree infoExecutionDegree = new InfoExecutionDegree();
-
-				List infoExecutionDegreeList = new ArrayList();
-				try {
-					infoExecutionDegreeList = (List) ServiceUtils.executeService(null,
-							  "ReadPublicExecutionDegreeByDCPID", argsLerLicenciaturas);
-				} catch (FenixServiceException e) {
-					throw new Exception(e);
-				}
-
-				List executionPeriodsLabelValueList = new ArrayList();
-				ComparatorChain comparatorChain = new ComparatorChain();
-				comparatorChain.addComparator(new BeanComparator("infoExecutionYear.idInternal"));
-		
-				Collections.sort(infoExecutionDegreeList, comparatorChain);
-				Collections.reverse(infoExecutionDegreeList);
-				for (int i = 0; i < infoExecutionDegreeList.size(); i++) {
-					infoExecutionDegree = (InfoExecutionDegree) infoExecutionDegreeList.get(i);
-					
-					InfoExecutionYear infoExecutionYear = new InfoExecutionYear();
-					infoExecutionYear.setIdInternal(infoExecutionDegree.getInfoExecutionYear().getIdInternal());
-					Object args[] = {infoExecutionYear};
-					List infoExecutionPeriodsList = new ArrayList();
-					try {
-						infoExecutionPeriodsList = (List) ServiceUtils.executeService(null,
-							 "ReadNotClosedPublicExecutionPeriodsByExecutionYear", args);
-					} catch (FenixServiceException e) {
-						throw new Exception(e);
-					}				 
-					for (int j = 0; j < infoExecutionPeriodsList.size(); j++) {
-						InfoExecutionPeriod infoExecutionPeriod1 = (InfoExecutionPeriod) infoExecutionPeriodsList.get(j);
-						executionPeriodsLabelValueList.add(new LabelValueBean(infoExecutionPeriod1.getName() + " - "
-						+ infoExecutionPeriod1.getInfoExecutionYear().getYear(), "" + infoExecutionPeriod1.getIdInternal()));
-				     	
-					}
-				}
-				
-            return executionPeriodsLabelValueList;
     }
 
 }
